# AITraining

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
project/: celery_worker.py  run.py
project/app/: __init__.py  celery_app.py  config.py  database.py  main.py  models.py  schemas.py
project/app/api/: dashboard.py  frames.py  qdrant.py  training.py  video.py
project/app/services/: alert_service.py  embedding_service.py  qdrant_service.py  s3_service.py
project/app/tasks/: extraction.py  training.py
project/app/utils/: hash.py  logger.py  session.py
project/frontend/: index.html
project/frontend/css/: styles.css
project/frontend/js/: app.js  config.js
project/frontend/js/api/: api.js
project/frontend/js/components/: dashboard.js  frames.js  qdrant.js  training.js  video-modal.js  video-upload.js  videos.js
project/frontend/js/router/: router.js
project/frontend/js/utils/: logger.js  state.js  ui.js
project/frontend/js/websocket/: websocket.js
